--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@
 /log/*.log
 /tmp
 /config/database.yml
-/config/environment_variables.yml
 /public/uploads
+# Ignore application configuration
+/config/application.yml
